--- a/package.json
+++ b/package.json
@@ -6,4 +6,9 @@
     "npm": "5.7.1",
     "node": "9.5.0"
   },
+  "scripts": {
+    "build": "cd client && npm install && npm run build && cd ..",
+    "deploy": "cp -a client/build/. public/",
+    "postinstall": "npm run build && npm run deploy && echo 'Client built!'"
+  }
 }
