--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "dependencies": {},
   "engines": {
-    "npm": "5.7.1",
-    "node": "9.5.0"
+    "npm": "5.7.1"
+   
   },
   "scripts": {
     "build": "cd client && npm install && npm run build && cd ..",
